# endstone-qqsync-plugin

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  report.md
.github/workflows/: build.yml  docker.yml  publish.yml
src/endstone_qqsync_plugin/: __init__.py  qqsync_plugin.py
src/endstone_qqsync_plugin/core/: __init__.py  config_manager.py  data_manager.py  event_handlers.py  permission_manager.py  verification_manager.py
src/endstone_qqsync_plugin/lib/websockets-15.0.1.dist-info/: RECORD
src/endstone_qqsync_plugin/ui/: __init__.py  forms.py
src/endstone_qqsync_plugin/utils/: __init__.py  helpers.py  imports.py  info.py  message_utils.py  time_utils.py
src/endstone_qqsync_plugin/websocket/: __init__.py  client.py  handlers.py
